# Fable

./: .env.example  .gitignore  00_README.md  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  DECISIONS.md  FABLE_Table_Engine_Blueprint.md  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  fable_engine.md  pyproject.toml
.claude/: settings.json
docs/: MCP_SETUP.md
image_prompts/: style-1.md  style-2.md  style-3.md  style-4.md  style-5.md
memory/: MEMORY.md  project_mockup_gaps.md  project_roadmap_structure.md  reference_gui_mockup.md
public/: README.md
schemas/: campaign.schema.json  character_sheet.schema.json  event.schema.json  world_state.schema.json
scripts/: build_public_links.py  setup.sh
tests/: test_audience_preservation.py  test_bootstrap_opening.py  test_cli.py  test_compiler.py  test_persistence.py  test_phase10_session.py  test_phase11_epistemic.py  test_phase12_effects.py  test_phase13_resolution.py  test_phase14_gateway.py  test_phase15_console.py  test_phase16_cadence.py  test_phase17_campaign.py  test_phase19_disposition.py  test_phase1_behavior.py  test_phase1_contracts.py  test_phase20_social.py  test_phase21_correction.py  test_phase21_edge.py  test_phase21_epistemic_labels.py  test_phase21_interface.py  test_phase21_knowledge_transfer.py  test_phase21_lifecycle.py  test_phase21_roll_visibility.py  test_phase21_session.py  test_phase21_settings.py  test_phase21_time_anchor.py  test_phase22_budgeter.py  test_phase22_golden.py  test_phase22_lore_injection.py  test_phase22_lorebook.py  test_phase22_properties.py  test_phase22_routing.py  (+13 more)
(+39 files in other folders)
