[project]
name = "fable-table-engine"
version = "0.0.0"
description = "AI-facilitated FABLE tabletop RPG table engine"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.111.0"]

[project.scripts]
fable-play = "fable_table_engine.cli:main"
fable-web = "fable_table_engine.web:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
